src/App.css
@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
html, body {
  background-color: #1C1D20;
  margin: 0;
  font-family: "Lexend", sans-serif;
  height: 100vh;
  width: 100%;
}

.App {
  display: flex;
  flex-direction: row;
  height: 100vh;
  width:100%;
  overflow: hidden;
}

.Routes {
  flex-grow: 1; /* Let it expand to fill available space */
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  overflow: auto; /* Enable scrolling if content exceeds the viewport */
}

